comm/manager/imc/ImcId16: Fix Java9+ deprecation for new Short.